# quasilocal-toolkit

./: CMakeLists.txt  MIT LICENSE.txt
cmake/: QuasiLocalToolkitConfig.cmake.in
cmake/Modules/: FindEigen3.cmake
docs/: Doxyfile.in  overview.md
examples/: CMakeLists.txt  README.md  kerr_validation.cpp  python_demo.py  schwarzschild_mass.cpp  surgical_demo.cpp
include/qlt/: config.h.in
include/qlt/core/: quasilocal_core.h  quasilocal_mass.h  surgical_flux.h  vorticity_bounds.h
include/qlt/grid/: surface_integral.h
src/core/: CMakeLists.txt  axisymmetric_j.cpp  axisymmetric_j.h  clebsch_komar.cpp  clebsch_komar.h  quasilocal_mass.cpp  quasilocal_mass.h  surgical_flux.cpp  surgical_flux.h  vorticity_bounds.cpp  vorticity_bounds.h
src/core/backup/: clebsch_komar.cpp  quasilocal_quantities.h  surgical_flux.cpp
src/grid/: CMakeLists.txt  coordinate_systems.cpp  coordinate_systems.h  killing_vector.cpp  killing_vector.cpp.new  killing_vector.h  metric_reader.cpp  surface_integral.cpp  test_include.cpp  volume_integral.cpp  volume_integral.h
src/grid/backup/: coordinate_systems.cpp  coordinate_systems.h  metric_reader.h
src/grid/backup_final/: coordinate_systems.cpp  coordinate_systems.h  killing_vector.cpp  metric_reader.cpp  surface_integral.cpp  surface_integral.h  volume_integral.cpp  volume_integral.h
src/grid/clean_backup/: killing_vector.cpp  killing_vector.h  metric_reader.h  surface_integral.cpp  volume_integral.cpp
src/python/: CMakeLists.txt  __init__.py.in  bindings.cpp  bindings.h  python_helpers.cpp  python_helpers.h  qlt_bindings.cpp  setup.py.in
tests/: CMakeLists.txt  python_test.py  test_all.cpp  test_axisymmetric.cpp  test_flat_space.cpp  test_kerr.cpp  test_schwarzschild.cpp  test_surgical_flux.cpp
